--- a/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Project2_Nvv_2210900081.csproj
+++ b/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Project2_Nvv_2210900081.csproj
@@ -129,7 +129,9 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Buildness\Shoppingcart.cs" />
     <Compile Include="Controllers\AdminsController.cs" />
+    <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\ChiTietDonHangsController.cs" />
     <Compile Include="Controllers\DonHangsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -175,6 +177,7 @@
     <Compile Include="Models\sysdiagram.cs">
       <DependentUpon>Nvv_project2Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="ModelView\CartItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -275,6 +278,8 @@
     <Content Include="Views\SanPhams\Details.cshtml" />
     <Content Include="Views\SanPhams\Edit.cshtml" />
     <Content Include="Views\SanPhams\Index.cshtml" />
+    <Content Include="Views\Cart\Index.cshtml" />
+    <Content Include="Views\Cart\ThongTinThanhToan.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
