--- a/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Project2_Nvv_2210900081.csproj
+++ b/Project2_Nvv_2210900081/Project2_Nvv_2210900081/Project2_Nvv_2210900081.csproj
@@ -129,7 +129,11 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Areas\AdminNVV\AdminNVVAreaRegistration.cs" />
+    <Compile Include="Areas\AdminNVV\Controllers\NVVDashBCController.cs" />
+    <Compile Include="Areas\AdminNVV\Controllers\NVVDonHangsController.cs" />
     <Compile Include="Buildness\Shoppingcart.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminsController.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\ChiTietDonHangsController.cs" />
@@ -178,6 +182,7 @@
       <DependentUpon>Nvv_project2Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="ModelView\CartItem.cs" />
+    <Compile Include="ModelView\DH_CT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -223,6 +228,15 @@
     <Content Include="Models\Nvv_project2Model1.edmx.diagram">
       <DependentUpon>Nvv_project2Model1.edmx</DependentUpon>
     </Content>
+    <Content Include="Areas\AdminNVV\Views\web.config" />
+    <Content Include="Areas\AdminNVV\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\AdminNVV\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\AdminNVV\Views\NVVDonHangs\Create.cshtml" />
+    <Content Include="Areas\AdminNVV\Views\NVVDonHangs\Delete.cshtml" />
+    <Content Include="Areas\AdminNVV\Views\NVVDonHangs\Details.cshtml" />
+    <Content Include="Areas\AdminNVV\Views\NVVDonHangs\Edit.cshtml" />
+    <Content Include="Areas\AdminNVV\Views\NVVDonHangs\Index.cshtml" />
+    <Content Include="Areas\AdminNVV\Views\NVVDashBC\Index.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
@@ -280,9 +294,12 @@
     <Content Include="Views\SanPhams\Index.cshtml" />
     <Content Include="Views\Cart\Index.cshtml" />
     <Content Include="Views\Cart\ThongTinThanhToan.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\AdminNVV\Data\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
